WildFly-Installation mit Maven ergänzt